--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,6 +67,7 @@ select {
   }
 }
 
+
 p {
   font-family: 'Libre Baskerville', serif;
 }
@@ -74,4 +75,24 @@ p {
 .title {
     font-family: 'Oswald', sans-serif;
     font-size: 5rem;
+}
+
+.image-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 600px;
+}
+
+.plane {
+  height: 400px;
+  /*filter: blur(1px);*/
+  z-index: -1;
+}
+
+.plane img {
+  /*transform: rotate(60deg);*/
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
