--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,9 +67,18 @@ select {
   }
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 p {
   font-family: 'Libre Baskerville', serif;
+}
+
+.header {
+  text-align: center;
 }
 
 .title {
@@ -77,16 +86,27 @@ p {
     font-size: 5rem;
 }
 
+.start-section {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    text-align: center;
+}
+
+.start {
+    margin-top: 50px;
+}
+
 .image-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
   height: 600px;
 }
 
 .plane {
-  height: 400px;
-  /*filter: blur(1px);*/
   z-index: -1;
 }
 
@@ -95,4 +115,46 @@ p {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+}
+
+.hidden {
+    display: none;
+}
+
+.controls {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  font-family: 'Libre Baskerville', serif;
+  margin-top: 20px;
+}
+
+.control__item {
+  text-align: center;
+}
+
+.controls__button {
+  border: 2px solid black;
+  background-color: white;
+  padding: 10px 0;
+  width: 150px;
+}
+
+.controls__button:hover {
+    color: white;
+    background-color: black;
+    padding: 10px 0;
+    width: 150px;
+}
+
+.controls__button:active {
+    color: white;
+    background-color: red;
+    padding: 10px 0;
+    width: 150px;
+}
+
+.countdown {
+  width: 100px;
+  font-size: 3rem;
 }
